[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbl_tools"
version = "0.0.12"
license = "MIT"
authors = [
	{ name = "Cristian Bravo Lillo", email = "cristian.bravo@gmail.com" },
]
description = "An specialization of config files that save themselves."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3.8",
	"License :: OSI Approved :: MIT License",
	"Development Status :: 2 - Pre-Alpha",
	"Environment :: Console",
	"Operating System :: POSIX :: Linux",
	"Topic :: Utilities",
]
